# HW_WEB_modul_13

HW_13/: main.py  pyproject.toml
HW_13/postgres-data/: postmaster.pid
HW_13/postgres-data/base/1/: pg_internal.init
HW_13/postgres-data/base/16384/: 16394  pg_internal.init
HW_13/postgres-data/base/5/: pg_internal.init
HW_13/postgres-data/global/: pg_control  pg_internal.init
HW_13/src/database/: db.py
HW_13/src/entity/: models.py
HW_13/src/repository/: contacts.py  users.py
HW_13/src/routes/: auth.py  contacts.py  users.py
HW_13/src/schemas/: contact.py  user.py
HW_13/src/services/: auth.py  email.py
HW_13_jango/: .env.example  pyproject.toml
HW_13_jango/homework_10/homework_10/: asgi.py  settings.py  urls.py  wsgi.py
HW_13_jango/homework_10/quotes/: forms.py  models.py  urls.py  views.py
HW_13_jango/homework_10/quotes/migrations/: 0001_initial.py
HW_13_jango/homework_10/quotes/static/quotes/: style.css
HW_13_jango/homework_10/quotes/templates/quotes/: add_author.html  add_quote.html  author_delete.html  author_detail.html  base.html  index.html  quote_delete.html  quotes_by_tag.html
HW_13_jango/homework_10/users/: forms.py  urls.py  views.py
HW_13_jango/homework_10/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
HW_13_jango/homework_10/utils/: authors.json  main.py  migration.py
